--- a/angular.json
+++ b/angular.json
@@ -8,7 +8,11 @@
       "sourceRoot": "src",
       "projectType": "application",
       "prefix": "app",
-      "schematics": {},
+      "schematics": {
+        "@schematics/angular:component": {
+          "styleext": "scss"
+        }
+      },
       "architect": {
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
@@ -23,7 +27,12 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css"
+              "node_modules/bootstrap/dist/css/bootstrap.css",
+              "node_modules/font-awesome/scss/font-awesome.scss",
+              "node_modules/material-design-icons/iconfont/material-icons.css",
+              "node_modules/angular2-draggable/css/resizable.min.css",
+              "node_modules/nebular-icons/scss/nebular-icons.scss",
+              "src/styles.scss"
             ],
             "scripts": []
           },
@@ -72,7 +81,7 @@
             "tsConfig": "src/tsconfig.spec.json",
             "karmaConfig": "src/karma.conf.js",
             "styles": [
-              "src/styles.css"
+              "src/styles.scss"
             ],
             "scripts": [],
             "assets": [
@@ -115,6 +124,46 @@
           "builder": "@angular-devkit/build-angular:tslint",
           "options": {
             "tsConfig": "e2e/tsconfig.e2e.json",
+            "exclude": [
+              "**/node_modules/**"
+            ]
+          }
+        }
+      }
+    },
+    "locatus-calendar": {
+      "root": "projects/locatus-calendar",
+      "sourceRoot": "projects/locatus-calendar/src",
+      "projectType": "library",
+      "prefix": "locatus",
+      "architect": {
+        "build": {
+          "builder": "@angular-devkit/build-ng-packagr:build",
+          "options": {
+            "tsConfig": "projects/locatus-calendar/tsconfig.lib.json",
+            "project": "projects/locatus-calendar/ng-package.json"
+          },
+          "configurations": {
+            "production": {
+              "project": "projects/locatus-calendar/ng-package.prod.json"
+            }
+          }
+        },
+        "test": {
+          "builder": "@angular-devkit/build-angular:karma",
+          "options": {
+            "main": "projects/locatus-calendar/src/test.ts",
+            "tsConfig": "projects/locatus-calendar/tsconfig.spec.json",
+            "karmaConfig": "projects/locatus-calendar/karma.conf.js"
+          }
+        },
+        "lint": {
+          "builder": "@angular-devkit/build-angular:tslint",
+          "options": {
+            "tsConfig": [
+              "projects/locatus-calendar/tsconfig.lib.json",
+              "projects/locatus-calendar/tsconfig.spec.json"
+            ],
             "exclude": [
               "**/node_modules/**"
             ]
