--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
+    "build:lib": "ng build --prod locatus-calendar",
+    "pack:lib": "cd dist/locatus-calendar && npm pack",
+    "package": "npm run build:lib && npm run pack:lib",
+    "deploy": "ng build --prod locatus-calendar-app && firebase deploy",
     "start": "ng serve",
     "build": "ng build",
     "test": "ng test",
@@ -11,22 +15,42 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^6.0.3",
+    "@angular/animations": "^6.1.4",
+    "@angular/cdk": "^6.4.6",
     "@angular/common": "^6.0.3",
     "@angular/compiler": "^6.0.3",
     "@angular/core": "^6.0.3",
     "@angular/forms": "^6.0.3",
     "@angular/http": "^6.0.3",
+    "@angular/material": "^6.4.6",
     "@angular/platform-browser": "^6.0.3",
     "@angular/platform-browser-dynamic": "^6.0.3",
     "@angular/router": "^6.0.3",
+    "@ng-bootstrap/ng-bootstrap": "^3.0.0",
+    "@types/jszip": "^3.1.4",
+    "@types/moment-timezone": "^0.5.8",
+    "angular2-draggable": "^2.1.2",
+    "bootstrap": "^4.1.3",
     "core-js": "^2.5.4",
+    "date-fns": "^1.29.0",
+    "file-saver": "^1.3.8",
+    "font-awesome": "^4.7.0",
+    "ical.js": "^1.2.2",
+    "immutable-ics": "^0.4.0",
+    "jszip": "^3.1.5",
+    "material-design-icons": "^3.0.1",
+    "moment-timezone": "^0.5.21",
+    "nebular-icons": "^1.0.9",
     "rxjs": "^6.0.0",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
     "@angular/compiler-cli": "^6.0.3",
+    "@angular-devkit/build-ng-packagr": "~0.6.8",
     "@angular-devkit/build-angular": "~0.6.8",
+    "ng-packagr": "^3.0.0-rc.2",
+    "tsickle": ">=0.25.5",
+    "tslib": "^1.7.1",
     "typescript": "~2.7.2",
     "@angular/cli": "~6.0.8",
     "@angular/language-service": "^6.0.3",
