--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,17 @@
     "lib": [
       "es2017",
       "dom"
-    ]
+    ],
+    "paths": {
+      "locatus-calendar": [
+        "dist/locatus-calendar"
+      ],
+      "locatus-calendar/*": [
+        "dist/locatus-calendar/*"
+      ],
+      "jszip": [
+        "node_modules/jszip/dist/jszip.js"
+      ],
+    }
   }
 }
